--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
-        </activity>
-
-        <activity android:name=".activity.GuideActivity">
-        </activity>
-
+        <!--欢迎页-->
         <activity android:name=".activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +17,10 @@
             </intent-filter>
         </activity>
 
+        <!--引导页-->
+        <activity android:name=".activity.GuideActivity"></activity>
+        <!--主界面-->
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
